--- a/places.html
+++ b/places.html
@@ -10,6 +10,8 @@
 <body onload="onInit()">
     
 <main>
+    <section id="map"></section>
+
     <aside class="places">
         <h2>My Fav Places:</h2>
         <ul class="places-list">
